[tool.poetry]
name = "interview-bot"
version = "0.1.0"
description = ""
authors = ["israeli <israeliyasmine@gmail.com>"]
readme = "README.md"
packages = [{include = "interview_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.10.0"
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"
streamlit = "^1.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
